--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="start-screen">
 		<button id="start"> Start Game</button>
 		<p>
-			Set Player: <input type="number" id="numPlayer" value="2" name="numPlayer" min="2" max="5">
+			<!-- Set Player: <input type="number" id="numPlayer" value="2" name="numPlayer" min="2" max="5"> -->
 		</p>
 
 	</div>
