--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=\, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https:..fonts.gstatic.com" crossorigin />
-	<link rel="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&
-  display=swap" rel="styleshee" />
-	<script src="https://kit.fontawesome.com/ccbd4d5bc1.js" crossorigin="annonymous"></script>
-	<link rel="stylesheet" href="style.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta />
 	<title>Panther Team</title>
+	<link rel="stylesheet" href="style.css">
+	<!-- <script type="importmap">
+			{
+				"imports": {
+					"engine/": "./src/engine/",
+					"game/": "./src/game/"
+				}
+			}
+		</script>
+	<script type="module" src="./src/index.js"></script> -->
 </head>
 
 <body>
@@ -33,7 +38,8 @@
 			<h1>Boomber Man</h1>
 			<h3>Panther Team</h3>
 			<ul>
-				<li><button id="start"> Start Game</button></li>
+				<!-- <li><button id="start"> Start Game</button></li> -->
+				<li><a href="startGame.html" id="start">Start Game</a></li>
 				<li><a href="#">Rules</a></li>
 				<li><a href="#">Creator</a></li>
 				<li><a href="#">Quit</a></li>
@@ -41,6 +47,11 @@
 		</div>
 	</div>
 
+	<!-- <img id="bomberman" src="./images/bomberman.png" />
+	<img id="font" src="./images/font.png" />
+	<img id="hud" src="./images/hud.png" />
+	<img id="stage" src="./images/stage.png" />
+	<img id="powerups" src="./images/powerups.png" /> -->
 </body>
 
 </html>
