--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 					"game/": "./src/game/"
 				}
 			}
-		</script>
-	<script type="module" src="./src/index.js"></script> -->
+		</script>-->
+	<!-- <script type="module" src="./src/index.js"></script> -->
 </head>
 
 <body>
@@ -42,6 +42,7 @@
 				<li><a href="startGame.html" id="start">Start Game</a></li>
 				<li><a href="#">Rules</a></li>
 				<li><a href="#">Creator</a></li>
+				<li><a href="setting.html">Setting</a></li>
 				<li><a href="#">Quit</a></li>
 			</ul>
 		</div>
