--- a/rule.html
+++ b/rule.html
@@ -72,67 +72,71 @@
 		<div class="menu">
 			<h1>Bomber Man</h1>
 			<h3>GamePlay</h3>
-			<div class ="scroll-bg">
+			<ul><a href="index.html">Back to menu</a></ul>
+			<div class="scroll-bg">
 				<div class="scroll-div">
 					<div class="scroll-object">
-		<p>Game Objective:</p>
+						<p>Game Objective:</p>
 
-		<p>The objective of the game is to be the last player standing by strategically placing bombs to eliminate opponents while avoiding being caught in the blast.
-			</p>
-		<p>
-			Game Setup:</p>
+						<p>The objective of the game is to be the last player standing by strategically placing bombs to eliminate
+							opponents while avoiding being caught in the blast.
+						</p>
+						<p>
+							Game Setup:</p>
 
-		Players enter an arena with a grid-based layout.
-		Each player controls a character (bomber) that can move horizontally and vertically on the grid.
-		The arena may have obstacles or destructible blocks that players can use for cover or destroy to access power-ups.
-		</p>
-		<p>Controls:</p>
+						Players enter an arena with a grid-based layout.
+						Each player controls a character (bomber) that can move horizontally and vertically on the grid.
+						The arena may have obstacles or destructible blocks that players can use for cover or destroy to access
+						power-ups.
+						</p>
+						<p>Controls:</p>
 
-		<p>Arrow keys: Move the bomber.
-		Spacebar or a designated key: Place a bomb.
-		</p>
-		<p>Game Mechanics:</p>
+						<p>Arrow keys: Move the bomber.
+							Spacebar or a designated key: Place a bomb.
+						</p>
+						<p>Game Mechanics:</p>
 
-		<p>Placing Bombs:</p>
+						<p>Placing Bombs:</p>
 
-		<p>Players can place bombs on empty tiles.
-		Each player has fight each other to find the champion.
-		Bombs have a countdown timer before exploding.
-		</p>
-		<p>Explosions:</p>
+						<p>Players can place bombs on empty tiles.
+							Each player has fight each other to find the champion.
+							Bombs have a countdown timer before exploding.
+						</p>
+						<p>Explosions:</p>
 
-		<p>When a bomb explodes, it creates a blast radius in horizontal and vertical directions.
-		The blast destroys destructible blocks and damages opponents caught in its range.
-		Players need to strategically place bombs to trap or eliminate opponents.
-		</p>
+						<p>When a bomb explodes, it creates a blast radius in horizontal and vertical directions.
+							The blast destroys destructible blocks and damages opponents caught in its range.
+							Players need to strategically place bombs to trap or eliminate opponents.
+						</p>
 
-		<p>Elimination:</p>
+						<p>Elimination:</p>
 
-		<p>Players are eliminated if they get caught in the blast radius of an explosion.
-		The last remaining player wins the round.</p>
+						<p>Players are eliminated if they get caught in the blast radius of an explosion.
+							The last remaining player wins the round.</p>
 
-		<p>Round System:</p>
+						<p>Round System:</p>
 
-		<p>The game consists of multiple rounds.
-		Players earn points for each round based on their performance.
-		The player with the highest total points at the end of the game is the overall winner.
-		</p>
-		<p>Strategy Tips:</p>
+						<p>The game consists of multiple rounds.
+							Players earn points for each round based on their performance.
+							The player with the highest total points at the end of the game is the overall winner.
+						</p>
+						<p>Strategy Tips:</p>
 
-		<p>Trap opponents:</p>
-		<p>Strategically place bombs to force opponents into tight spots or corners.
-		Power-Up Control: Secure power-ups to gain an advantage over opponents.
-		</p>
-		<p>Map Awareness:
-		</p>
-		<p>Be aware of the arena layout, including destructible blocks and safe zones.
-		</p>
-		<p>Avoid Self-Destruction:</p>
-		<p>Be cautious of your own bomb blasts and avoid getting caught in the explosions.</p>
+						<p>Trap opponents:</p>
+						<p>Strategically place bombs to force opponents into tight spots or corners.
+							Power-Up Control: Secure power-ups to gain an advantage over opponents.
+						</p>
+						<p>Map Awareness:
+						</p>
+						<p>Be aware of the arena layout, including destructible blocks and safe zones.
+						</p>
+						<p>Avoid Self-Destruction:</p>
+						<p>Be cautious of your own bomb blasts and avoid getting caught in the explosions.</p>
 
-		<p>Winning Conditions:</p>
+						<p>Winning Conditions:</p>
 
-		<p>	The player with the highest total points after a set number of rounds or the last player standing in a final round is declared the overall winner.</p>
+						<p> The player with the highest total points after a set number of rounds or the last player standing in a
+							final round is declared the overall winner.</p>
 					</div>
 				</div>
 			</div>
