--- a/startGame.html
+++ b/startGame.html
@@ -23,6 +23,7 @@
   <img id="hud" src="./images/hud.png" />
   <img id="stage" src="./images/stage.png" />
   <img id="powerups" src="./images/powerups.png" />
+  <img id="enemies" src="./images/enemies.png" />
 
 </body>
 
