--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<source src="./sound/Warriors.mp4" loop />
 		</audio>
 		<audio id="audioHover">
-			<source src="./sound/Warriors.mp4" loop /> -->
-		</audio>
+			<source src="./sound/Warriors.mp4" loop />
+		</audio>-->
 		<!--
 		<p>
 			Set Player: <input type="number" id="numPlayer" value="2" name="numPlayer" min="2" max="5">
