--- a/startGame.html
+++ b/startGame.html
@@ -18,12 +18,26 @@
 </head>
 
 <body>
+
+  <div class="menu start">
+    <h1>Boomber Man</h1>
+    <h3>Panther Team</h3>
+    <ul>
+      <!-- <li><button id="">  Game</button></li> -->
+      <li><button id="battle">Alive Battle Mode</button></li>
+      <li><button id="adventure">Adventure Mode</button></li>
+    </ul>
+  </div>
+
+  <li><a href="index.html"> Back to Menu</a></li>
+
   <img id="bomberman" src="./images/bomberman.png" />
   <img id="font" src="./images/font.png" />
   <img id="hud" src="./images/hud.png" />
   <img id="stage" src="./images/stage.png" />
   <img id="powerups" src="./images/powerups.png" />
   <img id="enemies" src="./images/enemies.png" />
+  <img id="winner" src="./images/winner.png" />
 
 </body>
 
