--- a/startGame.html
+++ b/startGame.html
@@ -15,6 +15,7 @@
     }
   </script>
   <script type="module" src="./src/index.js"></script>
+  <script type="module" src="./src/game/scenes/"></script>
 </head>
 
 <body>
@@ -29,7 +30,9 @@
     </ul>
   </div>
 
-  <li><a href="index.html"> Back to Menu</a></li>
+  <li class="button hidden" style="position: fixed; top: 400px;"><button>Play Again</button></li>
+  <li class="button hidden" style="position: fixed; top: 450px;"><button><a href="./index.html">Back to
+        Menu</a></button></li>
 
   <img id="bomberman" src="./images/bomberman.png" />
   <img id="font" src="./images/font.png" />
